fixing mobile display

--- a/index.html
+++ b/index.html
@@ -42,11 +42,8 @@
 				<ul>
 					<li><a href="index.html">About</a></li>
 					<li><a href="skills.html">Skills</a></li>
-					<!-- <li><a href="services.html">Services</a></li> -->
 					<li><a href="experience.html">Experience</a></li>
 					<li><a href="education.html">Education</a></li>
-					<!-- <li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="testimonials.html">Testimonials</a></li> -->
 					<li><a href="bib.html">Publications</a></li>
 				</ul>
 			</div>
@@ -71,7 +68,7 @@
 				</div>
 				<div class="general_info_content">
 					<div class="general_info_content_inner mCustomScrollbar" data-mcs-theme="minimal-dark">
-						<div class="general_info_title">Researcher </div>&nbsp;
+						<div class="general_info_title">PhD Candidate </div>&nbsp;
 						<div class="general_info_text">Empirical Software Engineering <span>.</span> Data Science </div>&nbsp;
 						<div class="general_info_text"><i class='fa fa-at fa-lg' > </i> tdey2@vols.utk.edu <span>,</span> tapjdey@gmail.com </div>
 						<!-- Social -->
@@ -103,9 +100,9 @@
 						<!-- <div class="about_title">Description</div> -->
 						<div class="about_text">
 							<p>
-								I am a PhD Candidate in Computer Science studying at <a href="https://www.eecs.utk.edu/">The University of Tennessee, Knoxville</a>. I received my B.Tech. and M.Tech. degrees in <i>Electronics and 
-								Electrical Communication Engineering</i> from <a href="http://iitkgp.ac.in/">I.I.T. Kharagpur</a> 
-								in 2012. I worked in IBM India Software Labs as a Staff Research Engineer from 2012 to 2015. 
+								I am a PhD Candidate in Computer Science studying at <a href="https://www.eecs.utk.edu/">The University of Tennessee, Knoxville</a>. I received my B.Tech. and M.Tech. degrees in <i>Electronics and
+								Electrical Communication Engineering</i> from <a href="http://iitkgp.ac.in/">I.I.T. Kharagpur</a>
+								in 2012. I worked in IBM India Software Labs as a Staff Research Engineer from 2012 to 2015.
 							</p>
 							<p>
 							I am a <b>passionate</b> and <b>self-motivated</b> researcher enthusiastic about studying the
