website V:1.0.7-update TA

--- a/bib.html
+++ b/bib.html
@@ -68,8 +68,8 @@
 				</div>
 				<div class="general_info_content">
 					<div class="general_info_content_inner mCustomScrollbar" data-mcs-theme="minimal-dark">
-						<div class="general_info_title">Researcher </div>&nbsp;
-						<div class="general_info_text">Empirical Software Engineering <span>.</span> Data Science </div>&nbsp;
+						<div class="general_info_title">PhD Candidate </div>&nbsp;
+						<div class="general_info_text">Empirical Software Engineering <span>,</span> Data Science </div>&nbsp;
 						<div class="general_info_text"><i class='fa fa-at fa-lg' > </i> tdey2@vols.utk.edu <span>,</span> tapjdey@gmail.com </div>
 						<!-- Social -->
 						<div class="social_container">
