--- a/education.html
+++ b/education.html
@@ -68,8 +68,8 @@
 				</div>
 				<div class="general_info_content">
 					<div class="general_info_content_inner mCustomScrollbar" data-mcs-theme="minimal-dark">
-						<div class="general_info_title">Researcher </div>&nbsp;
-						<div class="general_info_text">Empirical Software Engineering <span>.</span> Data Science </div>&nbsp;
+						<div class="general_info_title">PhD Candidate </div>&nbsp;
+						<div class="general_info_text">Empirical Software Engineering <span>,</span> Data Science </div>&nbsp;
 						<div class="general_info_text"><i class='fa fa-at fa-lg' > </i> tdey2@vols.utk.edu <span>,</span> tapjdey@gmail.com </div>
 						<!-- Social -->
 						<div class="social_container">
@@ -110,38 +110,9 @@
 								</div>
 								<div class="exp_text">
 									<ul>
-										<li> <b>Thesis topic</b> &ndash; Modeling User-Affected Software Properties for Open Source Software Supply Chains.
-										<li> <b>Research Focus</b> &ndash; Software Repository Mining, Data Analytics, Empirical Software Engineering
-										<li> <b> Research Projects</b> &ndash;
-										<ul>
-											<li>	&#9899; <b><i>Effects of Software Usage on Perceived Quality of a Software</i></b>
-											<ul>
-												<li> -Proposed an usage-independent <i>actionable</i> and <i>easy-to-use measure</i> of software quality
-												<li> -Used <i>Bayesian Networks</i> and <i>Random Forest</i> to model the interrelationship between software faults, complexity, and usage
-												<li> -Developed the model by studying a proprietary mobile software and verified the external validity of the concept for popular NPM packages
-											</ul>
-
-											<li> &#9899; <b><i>User Classification based on Participation Patterns in NPM Ecosystem</i></b>
-												<ul>
-        									<li> -Explored User participation to NPM packages inside and outside of the users' individual supply chains,
-														i.e. packages the user's projects depend on directly or indirectly  (dataset consisted of <b>1,376,946</b>
-														issues and pull-requests(PR) created for <b>4433</b> NPM packages and <b>272,142</b> issue creators)
-        									<li> -Classified the Users based on their participation patterns using <i>C-means clustering</i> algorithm
-      									</ul>
-											<li>  &#9899; <b><i> Predicting Pull Request Quality</i></b>
-												<ul>
-        									<li> -Investigated the factors affecting Pull Request Quality (chance of the Pull Request being accepted within a month) using Random Forest models
-        									<li> -Replicated a study that explored a similar question and investigated a larger dataset
-														(<b>483,988</b> Pull Requests from <b>4218</b> popular NPM packages) and improved the performance by adding additional factors,
-														achieving an AUC-ROC value of <b>0.95</b>, <b>6%</b> higher than the previous study
-      									</ul>
-
-											<li>  &#9899; <b><i> Software Supply Chain: Exploring the Effects of Interdependencies in a Software Ecosystem on Popularity</i></b>
-												<ul>
-        									<li> -Created Software Supply Chain for NPM Ecosystem by analyzing dependencies of packages
-        									<li> -Explored the effects of dependencies on Package popularity (downloads)
-      									</ul>
-										</ul>
+										<li> <b>Thesis topic</b> &ndash; Modeling User-Affected Software Properties for Open Source Software Supply Chains.</li>
+										<li> <b>Research Focus</b> &ndash; Software Repository Mining, Data Analytics, Empirical Software Engineering</li>
+										<li> <b>GPA:</b> 3.91/4.00 </li>
 									</ul>
 								</div>
 							</div>
