--- a/experience.html
+++ b/experience.html
@@ -68,8 +68,8 @@
 				</div>
 				<div class="general_info_content">
 					<div class="general_info_content_inner mCustomScrollbar" data-mcs-theme="minimal-dark">
-						<div class="general_info_title">Researcher </div>&nbsp;
-						<div class="general_info_text">Empirical Software Engineering <span>.</span> Data Science </div>&nbsp;
+						<div class="general_info_title">PhD Candidate </div>&nbsp;
+						<div class="general_info_text">Empirical Software Engineering <span>,</span> Data Science </div>&nbsp;
 						<div class="general_info_text"><i class='fa fa-at fa-lg' > </i> tdey2@vols.utk.edu <span>,</span> tapjdey@gmail.com </div>
 						<!-- Social -->
 						<div class="social_container">
@@ -102,6 +102,71 @@
 
 						<!-- Experience Item -->
 						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
+							<div><div class="exp_time">August 2015 <br></br>- Present</div></div>
+							<div class="exp_content">
+								<div class="exp_title_container">
+									<div class="exp_title">Graduate Research Assistant</div>
+									<div class="exp_subtitle">University of Tennessee, Knoxville</div>
+								</div>
+								<div class="exp_text">
+									<b> Research Projects</b> &ndash;
+									<ul>
+										<li>	&#9899; Effects of Software Usage on Perceived Quality of a Software
+										<!-- <ul>
+											<li> -Proposed an usage-independent <i>actionable</i> and <i>easy-to-use measure</i> of software quality
+											<li> -Used <i>Bayesian Networks</i> and <i>Random Forest</i> to model the interrelationship between software faults, complexity, and usage
+											<li> -Developed the model by studying a proprietary mobile software and verified the external validity of the concept for popular NPM packages
+										</ul> -->
+
+										<li> &#9899; User Classification based on Participation Patterns in NPM Ecosystem
+										<!-- <ul>
+        									<li> -Explored User participation to NPM packages inside and outside of the users' individual supply chains,
+														i.e. packages the user's projects depend on directly or indirectly  (dataset consisted of <b>1,376,946</b>
+														issues and pull-requests(PR) created for <b>4433</b> NPM packages and <b>272,142</b> issue creators)
+        									<li> -Classified the Users based on their participation patterns using <i>C-means clustering</i> algorithm
+      									</ul> -->
+										<li>  &#9899;  Predicting Pull Request Quality
+										<!-- <ul>
+        									<li> -Investigated the factors affecting Pull Request Quality (chance of the Pull Request being accepted within a month) using Random Forest models
+        									<li> -Replicated a study that explored a similar question and investigated a larger dataset
+														(<b>483,988</b> Pull Requests from <b>4218</b> popular NPM packages) and improved the performance by adding additional factors,
+														achieving an AUC-ROC value of <b>0.95</b>, <b>6%</b> higher than the previous study
+      									</ul> -->
+
+										<li>  &#9899; Software Supply Chain: Exploring the Effects of Interdependencies in a Software Ecosystem on Popularity
+										<!-- <ul>
+        									<li> -Created Software Supply Chain for NPM Ecosystem by analyzing dependencies of packages
+        									<li> -Explored the effects of dependencies on Package popularity (downloads)
+  										</ul> -->
+									</ul>
+								</div>
+							</div>
+						</div>
+
+
+						<!-- Experience Item -->
+						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
+							<div><div class="exp_time">August 2015 <br></br>- July 2017</div></div>
+							<div class="exp_content">
+								<div class="exp_title_container">
+									<div class="exp_title">Graduate Teaching Assistant</div>
+									<div class="exp_subtitle">University of Tennessee, Knoxville</div>
+								</div>
+								<div class="exp_text">
+									<b> Courses</b> &ndash;
+									<ul>
+										<li> <b>Spring 2017:</b> <a href="http://web.eecs.utk.edu/~bvanderz/teaching/cs365Sp17/general_info.html"> Programming Languages and Systems</a></li>
+										<li> <b>Fall 2016: </b> Fundamentals of Digital Archeology </li>
+										<li><b>Spring 2016: </b> <a href="http://web.eecs.utk.edu/~mbeck/classes/Spring16-cs361/"> Operating Systems</a> </li>
+										<li><b> Fall 2015: </b> <a href="https://github.com/fdac15"> Fundamentals of Digital Archeology  </a> </li>
+									</ul>
+								</div>
+							</div>
+						</div>
+
+
+						<!-- Experience Item -->
+						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
 							<div><div class="exp_time">June 2012 -<br></br> June 2015</div></div>
 							<div class="exp_content">
 								<div class="exp_title_container">
@@ -112,9 +177,9 @@
 									<ul>
 										<li> &ndash;<b>Primary Responsibility</b> &ndash; Key member of the team in charge of Quality Assurance of IBM’s 200mm Process Development Kits (PDK),
 											containing device models (primarily MOSFETs) and support components for chip design and layout
-        						<li> &ndash;Helped automate test procedures using Python that enhanced test coverage <b>~300x</b>, reduced turn-around-time by <b>75%</b>,
+        								<li> &ndash;Helped automate test procedures using Python that enhanced test coverage <b>~300x</b>, reduced turn-around-time by <b>75%</b>,
 											improved efficiency by <b>50%</b>, and reduced customer issues drastically
-        						<li>&ndash;Test methodology: "An Integrated Approach to Process Design Kit (PDK) Verification" accepted for <b>Patent Publication</b> (Ref. No. IN820131127)
+        								<li>&ndash;Test methodology: "An Integrated Approach to Process Design Kit (PDK) Verification" accepted for <b>Patent Publication</b> (Ref. No. IN820131127)
 									</ul>
 								</div>
 							</div>
