--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<div class="general_info_content">
 					<div class="general_info_content_inner mCustomScrollbar" data-mcs-theme="minimal-dark">
 						<div class="general_info_title">PhD Candidate </div>&nbsp;
-						<div class="general_info_text">Empirical Software Engineering <span>.</span> Data Science </div>&nbsp;
+						<div class="general_info_text">Empirical Software Engineering <span>,</span> Data Science </div>&nbsp;
 						<div class="general_info_text"><i class='fa fa-at fa-lg' > </i> tdey2@vols.utk.edu <span>,</span> tapjdey@gmail.com </div>
 						<!-- Social -->
 						<div class="social_container">
@@ -148,7 +148,7 @@
 
 							<!-- Loader -->
 							<div class="loader_container">
-								<div class="loader" data-perc="0.65"></div>
+								<div class="loader" data-perc="0.70"></div>
 								<div class="loader_content text-center">
 									<div class="loader_title">Programming</div>
 									<div class="loader_subtitle">Knowledge of <br>Programming Languages<br> and Algorithms</div>
