--- a/skills.html
+++ b/skills.html
@@ -68,8 +68,8 @@
 				</div>
 				<div class="general_info_content">
 					<div class="general_info_content_inner mCustomScrollbar" data-mcs-theme="minimal-dark">
-						<div class="general_info_title">Researcher </div>&nbsp;
-						<div class="general_info_text">Empirical Software Engineering <span>.</span> Data Science </div>&nbsp;
+						<div class="general_info_title">PhD Candidate </div>&nbsp;
+						<div class="general_info_text">Empirical Software Engineering <span>,</span> Data Science </div>&nbsp;
 						<div class="general_info_text"><i class='fa fa-at fa-lg' > </i> tdey2@vols.utk.edu <span>,</span> tapjdey@gmail.com </div>
 						<!-- Social -->
 						<div class="social_container">
@@ -108,8 +108,8 @@
 											(e.g. <i><a href="https://developer.github.com/v3/">GitHub</a>, <a href="http://ghtorrent.org">GHTorrent</a>,
 											<a href="https://github.com/woc-hack/tutorial">World of Code</a>, <a href="https://cloud.google.com/bigquery/">Google Big Query</a></i> etc.).
 											I have experience in using both relational (<i>MySQL</i>) and non-relational (<i>NoSQL, e.g. <a href="https://www.mongodb.com/">MongoDB</a></i>)
-											databases for data storage. I also am
-											familiar with useful utilities like <i><a href="https://hub.docker.com/">docker</a>, <a href="https://jupyter.org/">jupyter notebooks</a>,
+											<b>databases</b> for data storage. I also am
+											familiar with useful utilities like <i><a href="https://hub.docker.com/"><b>docker</b></a>, <a href="https://jupyter.org/">jupyter notebooks</a>,
 											vim, <a href="https://rstudio.com/">R-Studio</a>, <a href="https://shiny.rstudio.com/">R-Shiny</a></i> etc. and the <i>git</i> version
 											control system. In terms of documentation,
 											I am well-acquainted with <i>LaTeX</i> and <i>Markdown styles</i>. I am most familiar with the <i>Linux</i> operating system, and I primarily
