--- a/experience.html
+++ b/experience.html
@@ -138,6 +138,8 @@
         									<li> -Created Software Supply Chain for NPM Ecosystem by analyzing dependencies of packages
         									<li> -Explored the effects of dependencies on Package popularity (downloads)
   										</ul> -->
+
+										<li> &#9899; A systematic method for identifying bots that commit code in Git 
 									</ul>
 								</div>
 							</div>
