--- a/pubs.html
+++ b/pubs.html
@@ -4,7 +4,7 @@
 
 <head>
 <title>Publications</title>
-<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"> 
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"> 
 <style>
   a.buttan:link, a.buttan:visited{
     color: black;
