--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 He finished his Ph.D. in Computer Science from the <a href="https://www.utk.edu/">University of Tennessee, Knoxville</a> (UTK)
                 with <a href="http://mockus.org/">Dr. Audris Mockus</a>. <br>
                 He received his Bachelors and Masters Degree (under the Dual-Degree program) from the <a href="http://www.iitkgp.ac.in/">Indian 
-                Institute of Technology (IIT), Kharagpur</a> in Electronics and Electrcal Communication 
+                Institute of Technology (IIT), Kharagpur</a> in Electronics and Electrical Communication 
                 Engineering and worked in IBM for 3 years before joining his Ph.D. <br>
                 His research interests comprise the topics of <i>Open Source</i> and <i>InnerSource</i> development, 
                 <i>Empirical Software Engineering, Mining Software Repositories</i>, and <i>data analytics.</i> 
@@ -157,7 +157,7 @@
           <div class="row">
             <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;" id="research"><b>Active Research Projects</b></div>
             <ul>
-              <li><b>TREES Project:</b> Enabling Innersource software development/Corporate Software Engineering 
+              <li><b>TREES Project:</b> Enabling InnerSource software development/Corporate Software Engineering 
                 Capability at Huawei as part of the TREES project. </li>
               <li><b>Bots Research:</b> Detecting and Characterizing Bots in Social-Coding Platforms using the 
                 <a href="https://worldofcode.org/">World of Code </a> infrastructure.</li>
