Added ICSE Acceptance

--- a/misc.html
+++ b/misc.html
@@ -16,9 +16,40 @@
 
 <table>
 
+  <tr valign="top">
+    <td align="right" class="bibtexnumber">
+    [<a name="dey2020representation">8</a>]
+    </td>
+    <td class="bibtexitem">
+    Tapajit Dey, Andrey Karnauch, and Audris Mockus.
+     <b>Representation of developer expertise in open source software.</b> 
+     <em>arXiv preprint arXiv:2005.10176</em>, 2020.
+    [&nbsp;<a href="misc_bib.html#dey2020representation">bib</a>&nbsp;| 
+    <a href="https://arxiv.org/pdf/2005.10176">https://arxiv.org/pdf/2005.10176</a>&nbsp;]
+    &mdash; ACCEPTED in ICSE-2021.
+    </td>
+    </tr>
+
+    <tr valign="top">
+      <td align="right" class="bibtexnumber">
+      [<a name="ma2020world">7</a>]
+      </td>
+      <td class="bibtexitem">
+      Yuxing Ma, Tapajit Dey, Chris Bogart, Sadika Amreen, Marat Valiev, Adam Tutko,
+        David Kennard, Russell Zaretzki, and Audris Mockus.
+       <b>World of code: Enabling a research workflow for mining and analyzing
+        the universe of open source vcs data.</b>
+       <em>arXiv preprint arXiv:2010.16196</em>, 2020.
+      [&nbsp;<a href="misc_bib.html#ma2020world">bib</a>&nbsp;| 
+      <a href="https://arxiv.org/pdf/2010.16196">https://arxiv.org/pdf/2010.16196</a>&nbsp;]
+      &mdash; ACCEPTED in the Empirical Software Engineering Journal.
+      
+      </td>
+      </tr>
+
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="dey2020datasetPR">8</a>]
+[<a name="dey2020datasetPR">6</a>]
 </td>
 <td class="bibtexitem">
 Tapajit Dey and Audris Mockus.
@@ -31,26 +62,10 @@ Tapajit Dey and Audris Mockus.
 </tr>
 
 
-<tr valign="top">
-<td align="right" class="bibtexnumber">
-[<a name="ma2020world">7</a>]
-</td>
-<td class="bibtexitem">
-Yuxing Ma, Tapajit Dey, Chris Bogart, Sadika Amreen, Marat Valiev, Adam Tutko,
-  David Kennard, Russell Zaretzki, and Audris Mockus.
- World of code: Enabling a research workflow for mining and analyzing
-  the universe of open source vcs data.
- <em>arXiv preprint arXiv:2010.16196</em>, 2020.
-[&nbsp;<a href="misc_bib.html#ma2020world">bib</a>&nbsp;| 
-<a href="https://arxiv.org/pdf/2010.16196">https://arxiv.org/pdf/2010.16196</a>&nbsp;]
-
-</td>
-</tr>
-
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="dey2020mapping">6</a>]
+[<a name="dey2020mapping">5</a>]
 </td>
 <td class="bibtexitem">
 Tapajit Dey, Bogdan Vasilescu, and Audris Mockus.
@@ -64,7 +79,7 @@ Tapajit Dey, Bogdan Vasilescu, and Audris Mockus.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="dey2020datasetBOT">5</a>]
+[<a name="dey2020datasetBOT">4</a>]
 </td>
 <td class="bibtexitem">
 Tapajit Dey, Sara Mousavi, Eduardo Ponce, Tanner Fry, Bogdan Vasilescu, Anna
@@ -72,21 +87,6 @@ Tapajit Dey, Sara Mousavi, Eduardo Ponce, Tanner Fry, Bogdan Vasilescu, Anna
  A dataset of bot commits.(jan. 2020), 2020.
 [&nbsp;<a href="misc_bib.html#dey2020datasetBOT">bib</a>&nbsp;| 
 <a href="https://doi.org/10.5281/zenodo.3610205">https://doi.org/10.5281/zenodo.3610205</a>&nbsp;]
-
-</td>
-</tr>
-
-
-<tr valign="top">
-<td align="right" class="bibtexnumber">
-[<a name="dey2020representation">4</a>]
-</td>
-<td class="bibtexitem">
-Tapajit Dey, Andrey Karnauch, and Audris Mockus.
- Representation of developer expertise in open source software.
- <em>arXiv preprint arXiv:2005.10176</em>, 2020.
-[&nbsp;<a href="misc_bib.html#dey2020representation">bib</a>&nbsp;| 
-<a href="https://arxiv.org/pdf/2005.10176">https://arxiv.org/pdf/2005.10176</a>&nbsp;]
 
 </td>
 </tr>
