--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
               <p><b>Email:</b> tapajit <i class="fa fa-circle" aria-hidden="true" style="font-size:3px;"></i> dey <i class="fa fa-at"></i> lero <i class="fa fa-circle" aria-hidden="true" style="font-size:3px;"></i> ie <br>
               <dd><a href="https://scholar.google.com/citations?user=98aCJqwAAAAJ" target="_blank">Google Scholar</a></dd>  
               <dd><a href="https://dblp.org/pid/189/6251.html">DBLP</a></dd>
+              <dd><a href="https://conf.researchr.org/profile/tapajitdey">Researchr profile</a></dd>
               <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0002-1379-8539" href="https://orcid.org/0000-0002-1379-8539" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">0000-0002-1379-8539</a></div>
               <dd><a href="files/Tapajit_Dey_CV.pdf" target="_blank">Download CV</a></dd>
               <dd><a href="https://youtube.com/playlist?list=PLrYIYBqPz6TmGwaV9PzQbGmDqtL0ALYWJ">A Playlist of my talks from YouTube</a></dd>
@@ -134,6 +135,15 @@
               </p>
             </div>
             <div class="row">
+                <br>
+                <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Latest News (Feb. 2021)</b></div>
+                <ul>
+                    <li>Our proposed model for assessing InnerSource-readiness of a candidate project has been accepted as a Pattern in <a href="https://github.com/InnerSourceCommons/InnerSourcePatterns/blob/master/patterns/1-initial/good-first-project.md">InnerSource Commons</a></li>
+                    <li>I'm honored to serve as a PC member for the MSR'21 conference.</li>
+                    <li>Our paper <a href="https://arxiv.org/pdf/2005.10176">Representation of developer expertise in open source software</a> has been Accepted in ICSE'21 conference</li>
+                </ul>
+            </div>
+            <div class="row">
               <br>
               <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;" id="research"><b>Active Research Projects</b></div>
               <ul>
@@ -158,20 +168,24 @@
             <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>What I love to spend my time on</b></div>
             <p>
               <br>
-              I am fascinated by how artificial and virtual intelligence (and, by extension, bots) can 
-              change our world, how we can cohabit the world peacefully (without cutting people's livelihood), 
-              and how it will change the society in future. I also am a staunch supporter of the 
+              Knowledge, to me, is the ultimate ecstasy, and I strive to understand and decipher the way the world works. To me, it's not so much about "How the world works?", but about "Why does the world work the way it does?". 
+              <br>
+              I also am fascinated by how artificial and virtual intelligence can 
+              change our world, how we can cohabit the world peacefully,
+              and how it will change the society in future. 
+              <br>
+              I also am a staunch supporter of the 
               <a href="http://www.unesco.org/new/en/communication-and-information/portals-and-platforms/goap/open-science-movement/">Open Science Movement</a>,
               and support making knowledge accessible to everyone. 
               I'm a big fan of <a href="https://www.youtube.com/user/Vsauce">Vsauce</a>, 
               <a href="https://www.youtube.com/user/1veritasium">Veritasium</a>, 
               <a href="https://www.youtube.com/user/Kurzgesagt">Kurzgesagt</a>, 
               <a href="https://www.youtube.com/user/scishow">SciShow</a>, and similar informative YouTube channels.
-              <br></br>
+              <br>
               In terms of coding, I prefer using <i>R</i> (for statistical analysis), <i>shell 
               script</i> (for running small errands and big jobs), and <i>Python</i> (everything else).
-              <br></br>
-              My other interests, in no particular order:
+              <br>
+              <!-- My other interests, in no particular order:
               <ul>
                 <li>Single Player RPG Video Games (with good graphics) - TES series, Assassin's Creed series, Mass Effect series, 
                   Dragon Age series. </li>
@@ -183,7 +197,7 @@
                 <li>Human Psychology and how it unconsciously affects their behavior.</li>
                 <li>A Good Story.</li>
               </ul>
-              
+              -->
             </p>
           </div> 
           <br>
@@ -200,6 +214,7 @@
           <div class="row">
             <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;" id="teaching"><b>Teaching</b></div>
             <ul>
+              <li><b>Spring 2021 &mdash;</b> <i>Lecturer</i>: CS4911 - Introduction to Information Technology @ UL </li>
               <li><b>Fall 2020 &mdash;</b> <i>Lecturer</i>: CS4911 - Introduction to Information Technology @ UL </li>
               <li> <b>Spring 2017 &mdash;</b> <i>Teaching Assistant:</i> <a href="http://web.eecs.utk.edu/~bvanderz/teaching/cs365Sp17/general_info.html"> Programming Languages and Systems</a> @ UTK</li>
               <li> <b>Fall 2016 &mdash; </b> <i>Teaching Assistant:</i> Fundamentals of Digital Archeology  @ UTK</li>
@@ -207,6 +222,15 @@
               <li><b> Fall 2015 &mdash; </b> <i>Teaching Assistant:</i> <a href="https://github.com/fdac15"> Fundamentals of Digital Archeology  </a>  @ UTK</li>
             </ul>
           </div>
+        </div>
+        <br>
+        <div class="row">
+            <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;" ><b> Notable Positions</b></div>
+            <br>
+            <ul>
+                <li>Served as a Program Committee member (Technical Track) in the <a href="https://2021.msrconf.org/committee/msr-2021-technical-papers-program-committee">MSR'21 conference.</a></li>
+                <li>Served as a Program Committee member in the <a href="https://www.oss2021.org/committee/oss-2021-papers-program-committee">OSS'21 conference.</a></li>
+            </ul>
         </div>
         
         <!-- Publications -->
