Fixed Video link

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <li><b>TREES Project:</b> Enabling InnerSource software development/Corporate Software Engineering 
                   Capability at Huawei as part of the <a href="https://trees.lero.ie/">TREES</a> project. </li>
                   <ul>
-                    <li> <a href="https://tapjdey.github.io/InnerSource_Survey_2020/index.html">Results of the State of the InnerSource survey 2020 </a> [<a href="https://youtu.be/1L_cqSTEPmU" target="_top"> Video of the Talk</a> presented at the <a href="http://innersourcecommons.org/events/isc-apac-dec-2020/">2020 APAC InnerSource Commons summit</a>] </li>
+                    <li> <a href="https://tapjdey.github.io/InnerSource_Survey_2020/index.html">Results of the State of the InnerSource survey 2020 </a> [<a href="https://youtu.be/-XWBzcYuvxA" target="_top"> Video of the Talk</a> presented at the <a href="http://innersourcecommons.org/events/isc-apac-dec-2020/">2020 APAC InnerSource Commons summit</a>] </li>
                     <li><a href="https://github.com/tapjdey/InnerSource_Project_Fitness">A tool for estimating the "Fitness" of a project for InnerSource style development.</a> (Can be translated to English and Chinese on the fly)</li>
                   </ul>
                 <li><b>Bots Research:</b> Detecting and Characterizing Bots in Social-Coding Platforms using the 
@@ -206,7 +206,6 @@
             <ul>
               <li>    Software Supply Chain: Exploring the Effects of Interdependencies in a Software Ecosystem on Popularity</li>
               <li>     Predicting Pull Request Quality</li>
-              <li>   User Classification based on Participation Patterns in NPM Ecosystem</li>
               <li>	  Effects of Software Usage on Perceived Quality of a Software</li>
             </ul>
           </div>      
