--- a/index.html
+++ b/index.html
@@ -134,13 +134,14 @@
                 <i>Empirical Software Engineering, Mining Software Repositories</i>, and <i>data analytics.</i> 
               </p>
             </div>
+            <!-- NEWS -->
             <div class="row">
                 <br>
-                <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Latest News (Feb. 2021)</b></div>
+                <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Latest News (Mar. 2021)</b></div>
                 <ul>
-                    <li>Our proposed model for assessing InnerSource-readiness of a candidate project has been accepted as a Pattern in <a href="https://github.com/InnerSourceCommons/InnerSourcePatterns/blob/master/patterns/1-initial/good-first-project.md">InnerSource Commons</a></li>
+                    <li>Our papers <a href="https://arxiv.org/abs/2103.01145">The Secret Life of Hackathon Code</a> and <a href="https://arxiv.org/abs/2103.10167">Tracking Hackathon Code Creation and Reuse</a> have been accepted in the MSR'21 conference in the Techinal and Hackathon tracks respectively.</li>
                     <li>I'm honored to serve as a PC member for the MSR'21 conference.</li>
-                    <li>Our paper <a href="https://arxiv.org/pdf/2005.10176">Representation of developer expertise in open source software</a> has been Accepted in ICSE'21 conference</li>
+                    <li>Our paper <a href="https://arxiv.org/pdf/2005.10176">Representation of developer expertise in open source software</a> has been Accepted in ICSE'21 conference with an "Available" badge based on Artifact Evaluation.</li>
                 </ul>
             </div>
             <div class="row">
@@ -152,9 +153,10 @@
                   <ul>
                     <li> <a href="https://tapjdey.github.io/InnerSource_Survey_2020/index.html">Results of the State of the InnerSource survey 2020 </a> [<a href="https://youtu.be/-XWBzcYuvxA" target="_top"> Video of the Talk</a> presented at the <a href="http://innersourcecommons.org/events/isc-apac-dec-2020/">2020 APAC InnerSource Commons summit</a>] </li>
                     <li><a href="https://github.com/tapjdey/InnerSource_Project_Fitness">A tool for estimating the "Fitness" of a project for InnerSource style development.</a> (Can be translated to English and Chinese on the fly)</li>
+                    <li>Our proposed model for assessing InnerSource-readiness of a candidate project has been accepted as a Pattern in <a href="https://github.com/InnerSourceCommons/InnerSourcePatterns/blob/master/patterns/1-initial/good-first-project.md">InnerSource Commons</a>.</li>
                   </ul>
-                <li><b>Bots Research:</b> Detecting and Characterizing Bots in Social-Coding Platforms using the 
-                  <a href="https://worldofcode.org/">World of Code </a> infrastructure.</li>
+                <!-- <li><b>Bots Research:</b> Detecting and Characterizing Bots in Social-Coding Platforms using the  -->
+                  <!-- <a href="https://worldofcode.org/">World of Code </a> infrastructure.</li> -->
               </ul>
             </div>  
             
