--- a/pubs.html
+++ b/pubs.html
@@ -38,6 +38,23 @@ a.tlk:link, a.tlk:visited, .tlk {
 
 <table>
 
+  <tr valign="top">
+    <td align="right" class="bibtexnumber">
+    [<a name="ma2021world">13</a>]
+    </td>
+    <td class="bibtexitem">
+    Yuxing Ma, Tapajit Dey, Chris Bogart, Sadika Amreen, Marat Valiev, Adam Tutko,
+      David Kennard, Russell Zaretzki, and Audris Mockus.
+     <b>World of code: enabling a research workflow for mining and analyzing
+      the universe of open source vcs data.</b>
+     <em>Empirical Software Engineering</em>, 26(2):1--42, 2021.
+    [&nbsp;<a href="pubs_bib.html#ma2021world">bib</a>&nbsp;| 
+    <a href="https://doi.org/10.1007/s10664-020-09905-9">https://doi.org/10.1007/s10664-020-09905-9</a>&nbsp;|
+    <a href="https://arxiv.org/pdf/2010.16196" target="_top">Pre-Print</a>]
+    
+    </td>
+    </tr>
+
 <tr valign="top">
 <td align="right" class="bibtexnumber">
 [<a name="dey2020pullrequest">12</a>]
