--- a/pubs_bib.html
+++ b/pubs_bib.html
@@ -3,11 +3,25 @@
 <html>
 
 <head>
-<title>Bibtex entry for Publications</title>
+<title>pubs.bib</title>
 </head>
 
 <body>
-<h1>Bibtex entry for Publications</h1><a name="dey2020pullrequest"></a><pre>
+<h1>pubs.bib</h1><a name="ma2021world"></a><pre>
+@article{<a href="pubs.html#ma2021world">ma2021world</a>,
+  title = {World of code: enabling a research workflow for mining and analyzing the universe of open source VCS data},
+  author = {Ma, Yuxing and Dey, Tapajit and Bogart, Chris and Amreen, Sadika and Valiev, Marat and Tutko, Adam and Kennard, David and Zaretzki, Russell and Mockus, Audris},
+  journal = {Empirical Software Engineering},
+  volume = {26},
+  number = {2},
+  pages = {1--42},
+  year = {2021},
+  publisher = {Springer},
+  url = {https://doi.org/10.1007/s10664-020-09905-9}
+}
+</pre>
+
+<a name="dey2020pullrequest"></a><pre>
 @inproceedings{<a href="pubs.html#dey2020pullrequest">dey2020pullrequest</a>,
   author = {Dey, Tapajit and Mockus, Audris},
   title = {Effect of Technical and Social Factors on Pull Request Quality for the NPM Ecosystem},
