--- a/misc_bib.html
+++ b/misc_bib.html
@@ -3,11 +3,11 @@
 <html>
 
 <head>
-<title>Preprints, Datasets, and others</title>
+<title>misc.bib</title>
 </head>
 
 <body>
-<h1>Preprints, Datasets, and others</h1><a name="ma2016crowdsourcing"></a><pre>
+<h1>misc.bib</h1><a name="ma2016crowdsourcing"></a><pre>
 @article{<a href="misc.html#ma2016crowdsourcing">ma2016crowdsourcing</a>,
   title = {Crowdsourcing the discovery of software repositories in an educational environment},
   author = {Ma, Yuxing and Dey, Tapajit and Smith, Jarred M and Wilder, Nathan and Mockus, Audris},
@@ -15,7 +15,6 @@
   volume = {4},
   pages = {e2551v1},
   year = {2016},
-  publisher = {PeerJ Inc. San Francisco, USA},
   url = {https://peerj.com/preprints/2551.pdf}
 }
 </pre>
@@ -40,16 +39,6 @@
 }
 </pre>
 
-<a name="dey2020representation"></a><pre>
-@article{<a href="misc.html#dey2020representation">dey2020representation</a>,
-  title = {Representation of Developer Expertise in Open Source Software},
-  author = {Dey, Tapajit and Karnauch, Andrey and Mockus, Audris},
-  journal = {arXiv preprint arXiv:2005.10176},
-  year = {2020},
-  url = {https://arxiv.org/pdf/2005.10176}
-}
-</pre>
-
 <a name="dey2020datasetBOT"></a><pre>
 @misc{<a href="misc.html#dey2020datasetBOT">dey2020datasetBOT</a>,
   title = {A dataset of Bot Commits.(Jan. 2020)},
@@ -68,22 +57,42 @@
 }
 </pre>
 
-<a name="ma2020world"></a><pre>
-@article{<a href="misc.html#ma2020world">ma2020world</a>,
-  title = {World of Code: Enabling a Research Workflow for Mining and Analyzing the Universe of Open Source VCS data},
-  author = {Ma, Yuxing and Dey, Tapajit and Bogart, Chris and Amreen, Sadika and Valiev, Marat and Tutko, Adam and Kennard, David and Zaretzki, Russell and Mockus, Audris},
-  journal = {arXiv preprint arXiv:2010.16196},
-  year = {2020},
-  url = {https://arxiv.org/pdf/2010.16196}
-}
-</pre>
-
 <a name="dey2020datasetPR"></a><pre>
 @misc{<a href="misc.html#dey2020datasetPR">dey2020datasetPR</a>,
   title = {A Dataset of Pull Requests and A Trained Random Forest Model for predicting Pull Request Acceptance.(May 2020)},
   author = {Dey, Tapajit and Mockus, Audris},
   year = {2020},
   url = {https://doi.org/10.5281/zenodo.3858032}
+}
+</pre>
+
+<a name="dey2020representation"></a><pre>
+@article{<a href="misc.html#dey2020representation">dey2020representation</a>,
+  title = {Representation of Developer Expertise in Open Source Software},
+  author = {Dey, Tapajit and Karnauch, Andrey and Mockus, Audris},
+  journal = {arXiv preprint arXiv:2005.10176},
+  year = {2020},
+  url = {https://arxiv.org/pdf/2005.10176}
+}
+</pre>
+
+<a name="imam2021secret"></a><pre>
+@article{<a href="misc.html#imam2021secret">imam2021secret</a>,
+  title = {The Secret Life of Hackathon Code},
+  author = {Imam, Ahmed and Dey, Tapajit and Nolte, Alexander and Mockus, Audris and Herbsleb, James D},
+  journal = {arXiv preprint arXiv:2103.01145},
+  year = {2021},
+  url = {https://arxiv.org/abs/2103.01145}
+}
+</pre>
+
+<a name="imam2021tracking"></a><pre>
+@article{<a href="misc.html#imam2021tracking">imam2021tracking</a>,
+  title = {Tracking Hackathon Code Creation and Reuse},
+  author = {Imam, Ahmed and Dey, Tapajit},
+  journal = {arXiv preprint arXiv:2103.10167},
+  year = {2021},
+  url = {https://arxiv.org/abs/2103.10167}
 }
 </pre>
 
