--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@
             <!-- NEWS -->
             <div class="row">
                 <br>
-                <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Latest News (Mar. 2021)</b></div>
+                <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Latest News (May 2021)</b></div>
                 <ul>
+                    <li>I have been awarded the "Distinguished Reviewer Award" for MSR 2021 Technical Track.</li>
                     <li>Our papers <a href="https://arxiv.org/abs/2103.01145">The Secret Life of Hackathon Code</a> and <a href="https://arxiv.org/abs/2103.10167">Tracking Hackathon Code Creation and Reuse</a> have been accepted in the MSR'21 conference in the Techinal and Hackathon tracks respectively.</li>
                     <li>I'm honored to serve as a PC member for the MSR'21 conference.</li>
                     <li>Our paper <a href="https://arxiv.org/pdf/2005.10176">Representation of developer expertise in open source software</a> has been Accepted in ICSE'21 conference with an "Available" badge based on Artifact Evaluation.</li>
@@ -146,6 +147,7 @@
             </div>
             <div class="row">
               <br>
+              <!-- Current Research Projects -->
               <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;" id="research"><b>Active Research Projects</b></div>
               <ul>
                 <li><b>TREES Project:</b> Enabling InnerSource software development/Corporate Software Engineering 
@@ -203,6 +205,7 @@
             </p>
           </div> 
           <br>
+          <!-- Old Projects -->
           <div class="row">
             <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;"><b>Past/Dormant Research Projects</b></div>
             <ul>
@@ -212,6 +215,7 @@
             </ul>
           </div>      
           <br>
+          <!-- Teaching -->
           <div class="row">
             <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;" id="teaching"><b>Teaching</b></div>
             <ul>
@@ -225,12 +229,16 @@
           </div>
         </div>
         <br>
+        <!-- Positions & Awards -->
         <div class="row">
-            <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;" ><b> Notable Positions</b></div>
+            <div style="font-family: Arial, Helvetica, sans-serif; font-size: 28px;" ><b> Notable Positions, Awards, and Recognitions</b></div>
             <br>
             <ul>
-                <li>Served as a Program Committee member (Technical Track) in the <a href="https://2021.msrconf.org/committee/msr-2021-technical-papers-program-committee">MSR'21 conference.</a></li>
-                <li>Served as a Program Committee member in the <a href="https://www.oss2021.org/committee/oss-2021-papers-program-committee">OSS'21 conference.</a></li>
+                <li> <b>[2021] -</b> Received the <a href="https://twitter.com/msrconf/status/1390444181655539716">"Distinguished Reviewer Award"</a> for MSR 2021 Technical Track. </li>
+                <li> <b>[2021] -</b> Served as a Program Committee member (Technical Track) in the <a href="https://2021.msrconf.org/committee/msr-2021-technical-papers-program-committee">MSR'21 conference.</a></li>
+                <li> <b>[2021] -</b> Served as a Program Committee member in the <a href="https://www.oss2021.org/committee/oss-2021-papers-program-committee">OSS'21 conference.</a></li>
+                <li> <b>[2019] -</b> Our paper  <i>"Patterns of Effort Contribution and Demand and User Classification based on Participation Patterns in NPM Ecosystem"</i> received the <b>Best Paper Award </b> at the <a href="http://promisedata.org/2019/index.html">PROMISE - 2019</a> conference. </li>
+                <li> <b>[2017] -</b> Received the <i>Best Graduate Research Assistant</i> award and scholarshop from the University of Tennessee EECS department.</li>
             </ul>
         </div>
         
